--- a/src/components/Footer.module.scss
+++ b/src/components/Footer.module.scss
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #f1f3f5;
+    // background-color: #f1f3f5;
     padding: 3rem 0 1rem;
 
     h6 {
@@ -69,6 +69,10 @@
     .links {
         li {
             margin-bottom: 0.7rem;
+            font-family: 'Metropolis';
+            font-weight: 400;
+            size: 14px;
+            color: #676767;
 
             a {
                 font-size: 0.9rem;
@@ -80,6 +84,8 @@
             }
         }
     }
+
+    //style={{ fontFamily: 'Metropolis', fontWeight: '400', fontSize: '14px' }} 
 
     .iconLink {
         display: inline-block;
