--- a/src/components/PartnersSection.module.scss
+++ b/src/components/PartnersSection.module.scss
@@ -1,6 +1,6 @@
 .partnersSection {
     padding: 3rem 0;
-    background-color: #f8f9fa;
+    background-color: #FCE0EF33;
 
     .partnersCarousel {
         text-align: center;
